Update: Background - time fixed. Dark mode - Fixed. Contact - Submit email working.

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,17 +5,15 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-/* la animación que antes estaba en theme.extend → keyframes */
 @keyframes bgmove {
     0% {
     background-position: 0 0, 0 0;
   }
   100% {
-    background-position: 0 100%, 0 100%;
+    background-position: 0 30px, 0 30px;
   }
 }
 
-/* la utility que antes estaba en theme.extend → animation */
 @utility animate-bgmove {
-  animation: bgmove 40s infinite;
+  animation: bgmove 2s linear infinite;
 }
